# Qt_Interactions

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/controller/: AppController.cpp  AppController.h  BallController.cpp  BallController.h
src/model/: BallModel.cpp  BallModel.h  MessageModel.cpp  MessageModel.h
src/view/: BallWindow.cpp  BallWindow.h  MainWindow.cpp  MainWindow.h
