cmake_minimum_required(VERSION 3.21)
project(QtHello LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

find_package(Qt6 REQUIRED COMPONENTS Widgets)
qt_standard_project_setup()

set(APP_SOURCES
    src/main.cpp

    src/model/MessageModel.cpp
    src/model/MessageModel.h
    src/model/BallModel.cpp
    src/model/BallModel.h

    src/controller/AppController.cpp
    src/controller/AppController.h
    src/controller/BallController.cpp
    src/controller/BallController.h

    src/view/BallWindow.cpp
    src/view/BallWindow.h
    src/view/MainWindow.cpp
    src/view/MainWindow.h
)

add_executable(app ${APP_SOURCES})

target_include_directories(app PRIVATE src)

target_link_libraries(app PRIVATE Qt6::Widgets)
